<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/area_correo"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_nombre"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_correo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            app:errorEnabled="true"
            android:textColorHint="?android:attr/colorMultiSelectHighlight">

            <EditText
                android:id="@+id/campo_correo_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_correo"
                android:inputType="textEmailAddress"
                android:text="wen@gmail.com"
                android:textColorLink="@color/colorOrange"
                android:elevation="1dp"
                android:textColorHighlight="@color/colorOrange"
                android:textColorHint="@color/colorOrange" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_correo"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_password"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="2"
            android:src="@android:drawable/ic_secure" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:textColorHint="?android:attr/colorMultiSelectHighlight">

            <EditText
                android:id="@+id/campo_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:singleLine="true"
                app:errorEnabled="true"
                android:text="1234"
                android:textColorLink="@color/colorOrange"
                android:textColorHighlight="@color/colorOrange"
                android:textColorHint="@color/colorOrange" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <!-- Bottom Bar -->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/accion_login"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textColorLink="@color/colorOrange" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_mensaje"
        android:layout_marginLeft="100dp"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boton_login"
        android:orientation="horizontal"
        android:weightSum="1">

    </LinearLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimary"
        android:text="Not Registered ? Register Now !"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:background="@color/common_google_signin_btn_text_dark_default" />

</LinearLayout>