<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register">
<!--<ScrollView-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="fill_parent"-->
    <!--android:fillViewport="true"-->
    <!--tools:showIn="@layout/activity_register">-->

    <LinearLayout
        android:id="@+id/area_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_cliente" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            app:counterEnabled="true"
            app:counterMaxLength="30"
            app:errorEnabled="true"
            android:textColorHint="@color/colorOrange">

            <EditText
                android:id="@+id/campo_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_nombre"
                android:inputType="text"
                android:singleLine="true"
                android:textColorLink="@color/colorOrange"
                android:textColorHint="@color/colorOrange"
                android:textColorHighlight="@color/colorOrange"
                android:textCursorDrawable="@color/colorOrange" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_nombre"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_correo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_correo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            app:errorEnabled="true"
            android:textColorHint="@color/colorOrange">

            <EditText
                android:id="@+id/campo_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_correo"
                android:inputType="textEmailAddress"
                android:textColorLink="@color/colorOrange"
                android:textColorHint="@color/colorOrange"
                android:textColorHighlight="@color/colorOrange" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <!--<com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner-->
        <!--android:id="@+id/material_spinner2"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="Seleccione su sexo"-->
        <!--app:met_floatingLabel="normal"-->
        <!--android:textColorHint="#CFD8DC"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:layout_below="@+id/material_spinner1"-->
        <!--android:layout_alignParentStart="true" />-->

    <!-- Bottom Bar -->
    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boton_aceptar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/accion_aceptar"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
    android:id="@+id/area_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/area_correo"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/img_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_password"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="2"
            android:src="@android:drawable/ic_secure" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:textColorHint="@color/colorOrange">

            <EditText
                android:id="@+id/campo_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:singleLine="true"
                app:errorEnabled="true"
                android:textColorLink="@color/colorOrange"
                android:textColorHighlight="@color/colorOrange"
                android:textColorHint="@color/colorOrange" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/area_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/area_password"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/img_sex"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/imgsex" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:id="@+id/rgSexo"
            android:elevation="1dp">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/man"
                tools:text="Masculino"
                android:textColorLink="?attr/actionMenuTextColor"
                android:textSize="18sp" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/fem"
                tools:text="Femenino"
                android:textColorLink="?attr/actionMenuTextColor"
                android:textSize="18sp" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_below="@+id/area_sex"
        android:layout_alignParentStart="true">

        <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
            android:id="@+id/material_spinner1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Seleccione un país"
            app:met_floatingLabel="normal"
            android:textColorHint="#CFD8DC"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_marginTop="49dp"
            android:layout_below="@+id/area_correo"
            android:layout_alignParentStart="true" />
    </LinearLayout>

    <!--</ScrollView>-->

</RelativeLayout>